--- a/Voorblad.html
+++ b/Voorblad.html
@@ -3,11 +3,16 @@
 	<title>Voorblad</title>
 </head>
 <body>
+	<ul class="navbar">
+		<li><a class="active" href="Voorblad.html">Voorblad</a></li>
+		<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
+		<li><a href="Bronneblad.html">Bronneblad</a></li>
+	</ul>
 	<h1>Etiese Gebruik van Kunsmatige Intelligensie (KI) in die Onderwys- en Opleidingsektor</h1>
-<hr></hr>
+	<hr />
 		<h2>Fokusvraag</h2>
 				<p>Hoe kan die onderwys- en opleidingsektor die etiese gebruik van KI-stelsels op ’n plaaslike vlak verbeter?</p>
-<hr></hr>
+	<hr />
 		<h2>TAAKDEFINISIE</h2>
 			<h3>Wat is die huidige situasie?</h3>
 				<p>Kunsmatige Intelligensie het al meer gewild geword in ons daaglikse lewe, van aanbevelings op sosialemedia-platorms tot outonome voertuie wat in die strate navigeer. KI verander hoe ons met die wêreld omgaan. Alhoewel KI ’n nuttige hulpmiddel geword het, is daar steeds groot kommer oor die etiese gebruik van KI. 
@@ -39,11 +44,6 @@
 				</ol>	
 <hr></hr>
 		<h2>Vervolg is die ander blaaie:</h2>
-		<ul>	
-		<li><a href="Voorblad.html">Voorblad</a></li>
-		<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
-		<li><a href="Bronneblad.html">Bronneblad</a></li>
-		</ul>
 		
 <marquee>
 	<img src="KI-in-Klas-1.jpg" height="150" width="200"/>
@@ -53,5 +53,39 @@
 	<img src="KI-in-Klas-5.png" height="150" width="200"/>
 </marquee>
 
+<style>
+	body {
+		margin: 0;
+		padding: 0;
+	}
+
+	.navbar {
+		background: #334155;
+		list-style-type: none;
+		display: flex;
+		flex-direction: row;
+		gap: 0.5rem;
+		border-bottom: 1px solid black;
+		padding: 1rem;
+	}
+
+	.navbar li a {
+		text-decoration: none;
+		border: 1px solid black;
+		padding: 0.5rem;
+		background: white;
+		color: black;
+	}
+
+	.navbar li a:hover {
+		background: #ECECEC;
+	}
+
+	.navbar li a.active{
+		background: #088DAE;
+		color: white;
+	}
+
+</style>
 </body>
 </html> 
