--- a/Bronneblad.html
+++ b/Bronneblad.html
@@ -3,6 +3,11 @@
 	<title>Bronneblad</title>
 </head>
 	<body>
+	<ul class="navbar">
+		<li><a href="Voorblad.html">Voorblad</a></li>
+		<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
+		<li><a class="active" href="Bronneblad.html">Bronneblad</a></li>
+	</ul>
 	<h1><u>Bevindings</u></h1>
 	<table Border="5">
 		<th colspan="3">Grafieke</th>
@@ -29,26 +34,40 @@
 		<li>O'Reilly, S. S. (2025, Januarie 24). Die rol van onderwysers in die era van kunsmatige intelligensie (KI). Retrieved from www.akademia.ac.za: https://akademia.ac.za/onderwysers-en-kunsmatige-intelligensie/</li>
 		</ul>
 
-<hr></hr>	
-	<h2>Vervolg is die ander blaaie:</h2>
-		<ul>	
-		<li><a href="Voorblad.html">Voorblad</a></li>
-		<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
-		<li><a href="Bronneblad.html">Bronneblad</a></li>
-		</ul>
+<hr></hr>
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+		}
 
+		.navbar {
+			background: #334155;
+			list-style-type: none;
+			display: flex;
+			flex-direction: row;
+			gap: 0.5rem;
+			border-bottom: 1px solid black;
+			padding: 1rem;
+		}
 
+		.navbar li a {
+			text-decoration: none;
+			border: 1px solid black;
+			padding: 0.5rem;
+			background: white;
+			color: black;
+		}
 
+		.navbar li a:hover {
+			background: #ECECEC;
+		}
 
+		.navbar li a.active{
+			background: #088DAE;
+			color: white;
+		}
 
-
-
-
-
-
-
-
-
-
+	</style>
 	</body>
 </html>
