--- a/Inligtingsblad.html
+++ b/Inligtingsblad.html
@@ -3,11 +3,13 @@
 	<title>Inligtingsblad</title>
 </head>
 	<body>
-		<ul class="navbar">
-			<li><a href="Voorblad.html">Voorblad</a></li>
-			<li><a class="active" href="Inligtingsblad.html">Inligtingsblad</a></li>
-			<li><a href="Bronneblad.html">Bronneblad</a></li>
-		</ul>
+		<div class="nav-container">
+			<ul class="navbar">
+				<li><a href="Voorblad.html">Voorblad</a></li>
+				<li><a class="active" href="Inligtingsblad.html">Inligtingsblad</a></li>
+				<li><a href="Bronneblad.html">Bronneblad</a></li>
+			</ul>
+		</div>
 		<h1><u>Die impak (positief en negatief) van die gebruik van die KI-instrumente in die onderwys- en opleidingsektor</u></h1>
 			<h2>Wat is KI en hoekom is dit belangrik in die onderwys- en opleidingsektor?</h2>
 				<p>Kunsmatige intelligensie is die vermoë van rekenaars om te dink en te leer. As ’n rekenaar of robot ’n probleem oplos of ’n taal gebruik, is dit intelligent, maar omdat dit anders as ons mense se intelligensie is, verwys ons daarna as kunsmatige intelligensie.
@@ -89,14 +91,23 @@
 				padding: 0;
 			}
 
-			.navbar {
+			.nav-container {
+				padding-left: 10rem;
+				padding-right: 10rem;
 				background: #334155;
+				position: sticky;
+				top: 0;
+			}
+
+			.navbar {
 				list-style-type: none;
 				display: flex;
 				flex-direction: row;
 				gap: 0.5rem;
 				border-bottom: 1px solid black;
 				padding: 1rem;
+				position: sticky;
+				top: 0;
 			}
 
 			.navbar li a {
