--- a/Voorblad.html
+++ b/Voorblad.html
@@ -3,11 +3,13 @@
 	<title>Voorblad</title>
 </head>
 <body>
-	<ul class="navbar">
-		<li><a class="active" href="Voorblad.html">Voorblad</a></li>
-		<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
-		<li><a href="Bronneblad.html">Bronneblad</a></li>
-	</ul>
+	<div class="nav-container">
+		<ul class="navbar">
+			<li><a class="active" href="Voorblad.html">Voorblad</a></li>
+			<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
+			<li><a href="Bronneblad.html">Bronneblad</a></li>
+		</ul>
+	</div>
 	<h1>Etiese Gebruik van Kunsmatige Intelligensie (KI) in die Onderwys- en Opleidingsektor</h1>
 	<hr />
 		<h2>Fokusvraag</h2>
@@ -43,8 +45,7 @@
 				<li>Hoe hierdie uitdagings en implikasies oorkom kan word, deur aan te dui hoe KI-instrumente doeltreffend op ’n etiese wyse gebruik kan word.</li>
 				</ol>	
 <hr></hr>
-		<h2>Vervolg is die ander blaaie:</h2>
-		
+
 <marquee>
 	<img src="KI-in-Klas-1.jpg" height="150" width="200"/>
 	<img src="KI-in-Klas-2.png" height="150" width="200"/>
@@ -53,39 +54,48 @@
 	<img src="KI-in-Klas-5.png" height="150" width="200"/>
 </marquee>
 
-<style>
-	body {
-		margin: 0;
-		padding: 0;
-	}
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+		}
 
-	.navbar {
-		background: #334155;
-		list-style-type: none;
-		display: flex;
-		flex-direction: row;
-		gap: 0.5rem;
-		border-bottom: 1px solid black;
-		padding: 1rem;
-	}
+		.nav-container {
+			padding-left: 10rem;
+			padding-right: 10rem;
+			background: #334155;
+			position: sticky;
+			top: 0;
+		}
 
-	.navbar li a {
-		text-decoration: none;
-		border: 1px solid black;
-		padding: 0.5rem;
-		background: white;
-		color: black;
-	}
+		.navbar {
+			list-style-type: none;
+			display: flex;
+			flex-direction: row;
+			gap: 0.5rem;
+			border-bottom: 1px solid black;
+			padding: 1rem;
+			position: sticky;
+			top: 0;
+		}
 
-	.navbar li a:hover {
-		background: #ECECEC;
-	}
+		.navbar li a {
+			text-decoration: none;
+			border: 1px solid black;
+			padding: 0.5rem;
+			background: white;
+			color: black;
+		}
 
-	.navbar li a.active{
-		background: #088DAE;
-		color: white;
-	}
+		.navbar li a:hover {
+			background: #ECECEC;
+		}
 
-</style>
+		.navbar li a.active{
+			background: #088DAE;
+			color: white;
+		}
+
+	</style>
 </body>
 </html> 
