--- a/Bronneblad.html
+++ b/Bronneblad.html
@@ -79,6 +79,35 @@
 			color: white;
 		}
 
+		a {
+			border-radius: 50px;
+		}
+
+		h1 {
+			color: #2c3e50;
+			font-size: 1.8rem;
+			text-align: center;
+			margin: 30px 0 20px 0;
+			padding: 15px;
+			background: linear-gradient(135deg, #088DAE 0%, #334155 100%);
+			color: white;
+			/*border-radius: 8px;*/
+			box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+		}
+
+		h2 {
+			color: #34495e;
+			font-size: 1.3rem;
+			margin: 25px 0 15px 0;
+			padding: 12px 0;
+			border-left: 16px solid #088DAE;
+			padding-left: 20px;
+			background-color: #ecf0f1;
+			border-radius: 0 5px 5px 0;
+		}
+
+
+
 	</style>
 	</body>
 </html>
