--- a/Voorblad.html
+++ b/Voorblad.html
@@ -3,56 +3,59 @@
 	<title>Voorblad</title>
 </head>
 <body>
-	<div class="nav-container">
+	<nav class="nav-container">
 		<ul class="navbar">
 			<li><a class="active" href="Voorblad.html">Voorblad</a></li>
 			<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
 			<li><a href="Bronneblad.html">Bronneblad</a></li>
 		</ul>
-	</div>
-	<h1>Etiese Gebruik van Kunsmatige Intelligensie (KI) in die Onderwys- en Opleidingsektor</h1>
-	<hr />
-		<h2>Fokusvraag</h2>
-				<p>Hoe kan die onderwys- en opleidingsektor die etiese gebruik van KI-stelsels op ’n plaaslike vlak verbeter?</p>
-	<hr />
-		<h2>TAAKDEFINISIE</h2>
-			<h3>Wat is die huidige situasie?</h3>
-				<p>Kunsmatige Intelligensie het al meer gewild geword in ons daaglikse lewe, van aanbevelings op sosialemedia-platorms tot outonome voertuie wat in die strate navigeer. KI verander hoe ons met die wêreld omgaan. Alhoewel KI ’n nuttige hulpmiddel geword het, is daar steeds groot kommer oor die etiese gebruik van KI. 
-				Die etiese gebruik van KI-stelsels binne ’n instelling, besigheid of industrie, moet op die volgende beginsels gebaseer wees:
-					<ul>
-					<li>Deursigtigheid: Om die KI-stelsel vir gebruikers verstaanbaar te maak.</li>
-					<li>Aanspreeklikheid: Hou skeppers en operateurs verantwoordelik vir hul optrede.</li>
-					<li>Regverdigheid: Om te verseker dat die KI-stelsels nie teen individue of groepe diskrimineer nie.</li>
-					<li>Privaatheid en datasekuriteit: Beskerm individue se data en privaatheid deur die KI-stelsels.</li>
-					<li>Betroubaarheid en veiligheid: Verseker dat KI-stelsels veilig en betroubaar is om te gebruik.</li>
-					<li>Beheer deur mense: Om te verseker dat mense KI-besluite kan ignoreer om beheer te behou.</li>	
-					</ul>
-				Om etiese gebruik van KI binne ’n instelling, besigheid of industrie te verseker, moet die volgende prosedures en prosesse gevolg word:
-					<ul>
-					<li>Vestig duidelike etiese beginsels vir die verantwoordelike gebruik van ’n KI-stelsel.</li>
-					<li>Identifiseer en korrigeer enige vorm van diskriminasie van ’n KI-stelsel.</li>
-					<li>Verskaf opleiding en bevorder bewustheid van etiese beginsels vir ’n KI-stelsel.</li>
-					<li>Evalueer en monitor die etiese beginsels in ’n KI-stelsel deurlopend om terugvoer te gee om die etiese gebruik van KI te verbeter. </li>
-					<li>Onderwys- en Opleidingsektor: Studente/Leerders kan KI-stelsels gebruik om die leerervaring te verpersoonlik deur leerstelsels te skep wat kan identifiseer waarmee studente/leerders sukkel en watter ondersteuning hulle nodig het. Aspekte soos dataprivaatheid en deursigtigheid kan egter ’n etiese bekommernis word.</li>
-					</ul>
-				</p>
-			<h3>Wat sal die fokus en die doel (gewenste uitkoms) van my ondersoek wees?</h3>
-				<p>Daar is veral gefokus om die doel te bereik:</p>
-				<ol type="1">
-				<li>Die impak (positief en negatief) van die gebruik van KI-instrumente in die Onderwys- en Opleidingsektor.</li>
-				<li>Die manier waarop die Onderwys- en Opleidingsektor beïnvloed word deur die onetiese gebruik van KI-instrumente.</li>
-				<li>Die uitdagings, implikasies en gevolge verbonde aan die gebruik van die KI-instrumente.</li>
-				<li>Hoe hierdie uitdagings en implikasies oorkom kan word, deur aan te dui hoe KI-instrumente doeltreffend op ’n etiese wyse gebruik kan word.</li>
-				</ol>	
-<hr></hr>
+	</nav>
 
-<marquee>
-	<img src="KI-in-Klas-1.jpg" height="150" width="200"/>
-	<img src="KI-in-Klas-2.png" height="150" width="200"/>
-	<img src="KI-in-Klas-3.jpg" height="150" width="200"/>
-	<img src="KI-in-Klas-4.jpg" height="150"width="200"/>
-	<img src="KI-in-Klas-5.png" height="150" width="200"/>
-</marquee>
+	<section>
+		<h1>Etiese Gebruik van Kunsmatige Intelligensie (KI) in die Onderwys- en Opleidingsektor</h1>
+		<hr />
+		<h2>Fokusvraag</h2>
+		<p>Hoe kan die onderwys- en opleidingsektor die etiese gebruik van KI-stelsels op ’n plaaslike vlak verbeter?</p>
+		<hr />
+		<h2>TAAKDEFINISIE</h2>
+		<h3>Wat is die huidige situasie?</h3>
+		<p>Kunsmatige Intelligensie het al meer gewild geword in ons daaglikse lewe, van aanbevelings op sosialemedia-platorms tot outonome voertuie wat in die strate navigeer. KI verander hoe ons met die wêreld omgaan. Alhoewel KI ’n nuttige hulpmiddel geword het, is daar steeds groot kommer oor die etiese gebruik van KI.
+			Die etiese gebruik van KI-stelsels binne ’n instelling, besigheid of industrie, moet op die volgende beginsels gebaseer wees:
+		<ul>
+			<li>Deursigtigheid: Om die KI-stelsel vir gebruikers verstaanbaar te maak.</li>
+			<li>Aanspreeklikheid: Hou skeppers en operateurs verantwoordelik vir hul optrede.</li>
+			<li>Regverdigheid: Om te verseker dat die KI-stelsels nie teen individue of groepe diskrimineer nie.</li>
+			<li>Privaatheid en datasekuriteit: Beskerm individue se data en privaatheid deur die KI-stelsels.</li>
+			<li>Betroubaarheid en veiligheid: Verseker dat KI-stelsels veilig en betroubaar is om te gebruik.</li>
+			<li>Beheer deur mense: Om te verseker dat mense KI-besluite kan ignoreer om beheer te behou.</li>
+		</ul>
+		Om etiese gebruik van KI binne ’n instelling, besigheid of industrie te verseker, moet die volgende prosedures en prosesse gevolg word:
+		<ul>
+			<li>Vestig duidelike etiese beginsels vir die verantwoordelike gebruik van ’n KI-stelsel.</li>
+			<li>Identifiseer en korrigeer enige vorm van diskriminasie van ’n KI-stelsel.</li>
+			<li>Verskaf opleiding en bevorder bewustheid van etiese beginsels vir ’n KI-stelsel.</li>
+			<li>Evalueer en monitor die etiese beginsels in ’n KI-stelsel deurlopend om terugvoer te gee om die etiese gebruik van KI te verbeter. </li>
+			<li>Onderwys- en Opleidingsektor: Studente/Leerders kan KI-stelsels gebruik om die leerervaring te verpersoonlik deur leerstelsels te skep wat kan identifiseer waarmee studente/leerders sukkel en watter ondersteuning hulle nodig het. Aspekte soos dataprivaatheid en deursigtigheid kan egter ’n etiese bekommernis word.</li>
+		</ul>
+		</p>
+		<h3>Wat sal die fokus en die doel (gewenste uitkoms) van my ondersoek wees?</h3>
+		<p>Daar is veral gefokus om die doel te bereik:</p>
+		<ol type="1">
+			<li>Die impak (positief en negatief) van die gebruik van KI-instrumente in die Onderwys- en Opleidingsektor.</li>
+			<li>Die manier waarop die Onderwys- en Opleidingsektor beïnvloed word deur die onetiese gebruik van KI-instrumente.</li>
+			<li>Die uitdagings, implikasies en gevolge verbonde aan die gebruik van die KI-instrumente.</li>
+			<li>Hoe hierdie uitdagings en implikasies oorkom kan word, deur aan te dui hoe KI-instrumente doeltreffend op ’n etiese wyse gebruik kan word.</li>
+		</ol>
+		<hr></hr>
+
+		<marquee>
+			<img src="KI-in-Klas-1.jpg" height="150" width="200"/>
+			<img src="KI-in-Klas-2.png" height="150" width="200"/>
+			<img src="KI-in-Klas-3.jpg" height="150" width="200"/>
+			<img src="KI-in-Klas-4.jpg" height="150"width="200"/>
+			<img src="KI-in-Klas-5.png" height="150" width="200"/>
+		</marquee>
+	</section>
 
 	<style>
 		body {
@@ -124,6 +127,10 @@
 		}
 
 
+		section {
+			padding-left: 10rem;
+			padding-right: 10rem;
+		}
 
 	</style>
 </body>
