--- a/Bronneblad.html
+++ b/Bronneblad.html
@@ -3,40 +3,44 @@
 	<title>Bronneblad</title>
 </head>
 	<body>
-	<div class="nav-container">
+	<nav class="nav-container">
 		<ul class="navbar">
 			<li><a href="Voorblad.html">Voorblad</a></li>
 			<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
 			<li><a class="active" href="Bronneblad.html">Bronneblad</a></li>
 		</ul>
-	</div>
-	<h1><u>Bevindings</u></h1>
-	<table Border="5">
-		<th colspan="3">Grafieke</th>
-		<tr>
-			<td><img src="Sirkelgrafiek.png" height="200" width="350" alt="Terugvoer volgens % Geslag" ></td>
-			<td><b>Aanbeveling:</b> Gevallestudie moet uit eweveel dames en mans bestaan.</td>
-			<td><b>Bevinding:</b> Die grafiek dui die persentasie geslag (dames en mans) wat die vorm beantwoord het aan.</td>
-		</tr>
-		<tr>
-			<td><img src="Staafgrafiek.png" height="200" width="350" alt="Gevoel teenoor KI Gebruik" ></td>
-			<td><b>Aanbeveling:</b>Die gevallestudie moet ’n groter hoeveelheid mense insluit.</td>
-			<td><b>Bevinding:</b>Die grafiek toon die mense se gevoel teenoor die gebruik van KI-instrumente aan.</td>
-		</tr>
-		<tr>
-			<td><img src="Picture3.png" height="200" width="350" alt="Staafgrafiek van deelname"></td>
-			<td><b>Aanbeveling:</b>xxxx</td>
-			<td><b>Bevinding:</b>xxx</td>
-		</tr>	
-	</table>
-	<h1><u>Bibliografie</u></h1>
+	</nav>
+
+	<section>
+		<h1><u>Bevindings</u></h1>
+		<table Border="5">
+			<th colspan="3">Grafieke</th>
+			<tr>
+				<td><img src="Sirkelgrafiek.png" height="200" width="350" alt="Terugvoer volgens % Geslag" ></td>
+				<td><b>Aanbeveling:</b> Gevallestudie moet uit eweveel dames en mans bestaan.</td>
+				<td><b>Bevinding:</b> Die grafiek dui die persentasie geslag (dames en mans) wat die vorm beantwoord het aan.</td>
+			</tr>
+			<tr>
+				<td><img src="Staafgrafiek.png" height="200" width="350" alt="Gevoel teenoor KI Gebruik" ></td>
+				<td><b>Aanbeveling:</b>Die gevallestudie moet ’n groter hoeveelheid mense insluit.</td>
+				<td><b>Bevinding:</b>Die grafiek toon die mense se gevoel teenoor die gebruik van KI-instrumente aan.</td>
+			</tr>
+			<tr>
+				<td><img src="Picture3.png" height="200" width="350" alt="Staafgrafiek van deelname"></td>
+				<td><b>Aanbeveling:</b>xxxx</td>
+				<td><b>Bevinding:</b>xxx</td>
+			</tr>
+		</table>
+		<h1><u>Bibliografie</u></h1>
 		<ul>
-		<li>Adendorff, H. J.-S. (2024). KI-geletterheid is 'n kritieke komponent van leer in die 21ste eeu. Universiteit van Stellenbosch, 1-3.</li>
-		<li>Esterhuizen, Z. (2024, Junie 10). Kunsmatige intelligensie. Retrieved from www.weet.co.za: https://weet.co.za/wetenskap-en-geografie/kunsmatige-intelligensie/</li>
-		<li>O'Reilly, S. S. (2025, Januarie 24). Die rol van onderwysers in die era van kunsmatige intelligensie (KI). Retrieved from www.akademia.ac.za: https://akademia.ac.za/onderwysers-en-kunsmatige-intelligensie/</li>
+			<li>Adendorff, H. J.-S. (2024). KI-geletterheid is 'n kritieke komponent van leer in die 21ste eeu. Universiteit van Stellenbosch, 1-3.</li>
+			<li>Esterhuizen, Z. (2024, Junie 10). Kunsmatige intelligensie. Retrieved from www.weet.co.za: https://weet.co.za/wetenskap-en-geografie/kunsmatige-intelligensie/</li>
+			<li>O'Reilly, S. S. (2025, Januarie 24). Die rol van onderwysers in die era van kunsmatige intelligensie (KI). Retrieved from www.akademia.ac.za: https://akademia.ac.za/onderwysers-en-kunsmatige-intelligensie/</li>
 		</ul>
 
-<hr></hr>
+		<hr></hr>
+	</section>
+
 	<style>
 		body {
 			margin: 0;
@@ -106,7 +110,10 @@
 			border-radius: 0 5px 5px 0;
 		}
 
-
+		section {
+			padding-left: 10rem;
+			padding-right: 10rem;
+		}
 
 	</style>
 	</body>
