#align nav with content

--- a/Voorblad.html
+++ b/Voorblad.html
@@ -17,7 +17,7 @@
 		<h2>Fokusvraag</h2>
 		<p>Hoe kan die onderwys- en opleidingsektor die etiese gebruik van KI-stelsels op ’n plaaslike vlak verbeter?</p>
 		<hr />
-		<h2>TAAKDEFINISIE</h2>
+		<h2>Taakdefinisie</h2>
 		<h3>Wat is die huidige situasie?</h3>
 		<p>Kunsmatige Intelligensie het al meer gewild geword in ons daaglikse lewe, van aanbevelings op sosialemedia-platorms tot outonome voertuie wat in die strate navigeer. KI verander hoe ons met die wêreld omgaan. Alhoewel KI ’n nuttige hulpmiddel geword het, is daar steeds groot kommer oor die etiese gebruik van KI.
 			Die etiese gebruik van KI-stelsels binne ’n instelling, besigheid of industrie, moet op die volgende beginsels gebaseer wees:
@@ -77,7 +77,7 @@
 			flex-direction: row;
 			gap: 0.5rem;
 			border-bottom: 1px solid black;
-			padding: 1rem;
+			padding: 1rem 1rem 1rem 0;
 			position: sticky;
 			top: 0;
 		}
