--- a/Bronneblad.html
+++ b/Bronneblad.html
@@ -61,7 +61,7 @@
 			flex-direction: row;
 			gap: 0.5rem;
 			border-bottom: 1px solid black;
-			padding: 1rem;
+			padding: 1rem 1rem 1rem 0;
 			position: sticky;
 			top: 0;
 		}
