--- a/Voorblad.html
+++ b/Voorblad.html
@@ -4,11 +4,11 @@
 </head>
 <body>
 	<nav class="nav-container">
-		<ul class="navbar">
-			<li><a class="active" href="Voorblad.html">Voorblad</a></li>
-			<li><a href="Inligtingsblad.html">Inligtingsblad</a></li>
-			<li><a href="Bronneblad.html">Bronneblad</a></li>
-		</ul>
+		<div class="navbar">
+			<div><a class="active" href="Voorblad.html">Voorblad</a></div>
+			<div><a href="Inligtingsblad.html">Inligtingsblad</a></div>
+			<div><a href="Bronneblad.html">Bronneblad</a></div>
+		</div>
 	</nav>
 
 	<section>
@@ -82,7 +82,7 @@
 			top: 0;
 		}
 
-		.navbar li a {
+		.navbar div a {
 			text-decoration: none;
 			border: 1px solid black;
 			padding: 0.5rem;
@@ -90,11 +90,11 @@
 			color: black;
 		}
 
-		.navbar li a:hover {
+		.navbar div a:hover {
 			background: #ECECEC;
 		}
 
-		.navbar li a.active{
+		.navbar div a.active{
 			background: #088DAE;
 			color: white;
 		}
@@ -130,6 +130,15 @@
 		section {
 			padding-left: 10rem;
 			padding-right: 10rem;
+		}
+
+		p {
+			background-color: white;
+			padding: 20px;
+			margin: 15px 0;
+			box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+			text-align: justify;
+			border-left: 16px solid #d9a638;
 		}
 
 	</style>
