li styling and color changes

--- a/Inligtingsblad.html
+++ b/Inligtingsblad.html
@@ -153,7 +153,7 @@
 				font-size: 1.3rem;
 				margin: 25px 0 15px 0;
 				padding: 12px 0;
-				border-left: 16px solid #088DAE;
+				border-left: 16px solid #00334d;
 				padding-left: 20px;
 				background-color: #ecf0f1;
 				border-radius: 0 5px 5px 0;
@@ -167,6 +167,15 @@
 			p {
 				background-color: white;
 				padding: 20px;
+				margin: 15px 0;
+				box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+				text-align: justify;
+				border-left: 16px solid #088DAE;
+			}
+
+			li {
+				background-color: white;
+				padding: 5px;
 				margin: 15px 0;
 				box-shadow: 0 2px 10px rgba(0,0,0,0.08);
 				text-align: justify;
