li styling and color changes

--- a/Bronneblad.html
+++ b/Bronneblad.html
@@ -124,6 +124,16 @@
 			border-left: 16px solid #d9a638;
 		}
 
+		li {
+			background-color: white;
+			padding: 5px;
+			margin: 15px 0;
+			box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+			text-align: justify;
+			border-left: 10px solid #d9a638;
+		}
+
+
 	</style>
 	</body>
 </html>
