li styling and color changes

--- a/Inligtingsblad.html
+++ b/Inligtingsblad.html
@@ -99,7 +99,7 @@
 			.nav-container {
 				padding-left: 10rem;
 				padding-right: 10rem;
-				background: #334155;
+				background: linear-gradient(135deg, #334155 0%,  #088DAE 100%);
 				position: sticky;
 				top: 0;
 			}
