--- a/Bronneblad.html
+++ b/Bronneblad.html
@@ -50,7 +50,7 @@
 		.nav-container {
 			padding-left: 10rem;
 			padding-right: 10rem;
-			background: #334155;
+			background: linear-gradient(135deg, #334155 0%,  #088DAE 100%);
 			position: sticky;
 			top: 0;
 		}
@@ -104,7 +104,7 @@
 			font-size: 1.3rem;
 			margin: 25px 0 15px 0;
 			padding: 12px 0;
-			border-left: 16px solid #088DAE;
+			border-left: 16px solid #00334d;
 			padding-left: 20px;
 			background-color: #ecf0f1;
 			border-radius: 0 5px 5px 0;
@@ -121,7 +121,7 @@
 			margin: 15px 0;
 			box-shadow: 0 2px 10px rgba(0,0,0,0.08);
 			text-align: justify;
-			border-left: 16px solid #d9a638;
+			border-left: 16px solid #088DAE;
 		}
 
 		li {
@@ -132,6 +132,132 @@
 			text-align: justify;
 			border-left: 10px solid #d9a638;
 		}
+
+		table {
+			width: 100%;
+			border-collapse: collapse;
+			margin: 25px 0;
+			background: white;
+			box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+			border-radius: 12px;
+			overflow: hidden;
+			border: none !important;
+		}
+
+		table th {
+			background: linear-gradient(135deg, #088DAE 0%, #334155 100%);
+			color: white;
+			font-weight: 600;
+			font-size: 1.2rem;
+			padding: 20px;
+			text-align: center;
+			letter-spacing: 0.5px;
+		}
+
+		table td {
+			padding: 15px;
+			border-bottom: 1px solid #e0e0e0;
+			vertical-align: top;
+			transition: background-color 0.3s ease;
+		}
+
+		table tr:hover td {
+			background-color: #f8f9fa;
+		}
+
+		table tr:last-child td {
+			border-bottom: none;
+		}
+
+		/* Optimized column widths for better space usage */
+		table td:first-child {
+			width: 40%; /* Image column */
+			text-align: center;
+		}
+
+		table td:nth-child(2),
+		table td:nth-child(3) {
+			width: 30%; /* Text columns */
+		}
+
+		/* Style the images in table - make them more responsive */
+		table td img {
+			max-width: 100%;
+			height: auto;
+			min-height: 180px;
+			border-radius: 8px;
+			box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+			transition: transform 0.3s ease, box-shadow 0.3s ease;
+		}
+
+		table td img:hover {
+			transform: scale(1.05);
+			box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+		}
+
+		/* Style bold text in table with better spacing */
+		table td b {
+			color: #2c3e50;
+			font-size: 1.1rem;
+			display: block;
+			margin-bottom: 10px;
+			padding: 8px 12px;
+			background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
+			border-left: 4px solid #088DAE;
+			border-radius: 4px;
+		}
+
+		/* Better text formatting in table cells */
+		table td:not(:first-child) {
+			font-size: 0.95rem;
+			line-height: 1.6;
+			text-align: justify;
+		}
+
+		/* Add some visual separation between recommendation and finding */
+		table td:nth-child(2) {
+			border-right: 2px solid #f1f3f4;
+		}
+
+		/* Responsive design for smaller screens */
+		@media (max-width: 1200px) {
+			table td img {
+				min-height: 150px;
+			}
+
+			table td {
+				padding: 12px;
+			}
+
+			table td b {
+				font-size: 1rem;
+			}
+		}
+
+		@media (max-width: 768px) {
+			/* Stack table content vertically on mobile */
+			table, thead, tbody, th, td, tr {
+				display: block;
+			}
+
+			table td:first-child,
+			table td:nth-child(2),
+			table td:nth-child(3) {
+				width: 100%;
+			}
+
+			table td {
+				border: none;
+				border-bottom: 1px solid #e0e0e0;
+				padding: 15px;
+			}
+
+			table td img {
+				max-width: 80%;
+				min-height: auto;
+			}
+		}
+
 
 
 	</style>
