--- a/Voorblad.html
+++ b/Voorblad.html
@@ -37,7 +37,7 @@
 			<li>Evalueer en monitor die etiese beginsels in ’n KI-stelsel deurlopend om terugvoer te gee om die etiese gebruik van KI te verbeter. </li>
 			<li>Onderwys- en Opleidingsektor: Studente/Leerders kan KI-stelsels gebruik om die leerervaring te verpersoonlik deur leerstelsels te skep wat kan identifiseer waarmee studente/leerders sukkel en watter ondersteuning hulle nodig het. Aspekte soos dataprivaatheid en deursigtigheid kan egter ’n etiese bekommernis word.</li>
 		</ul>
-		</p>
+
 		<h3>Wat sal die fokus en die doel (gewenste uitkoms) van my ondersoek wees?</h3>
 		<p>Daar is veral gefokus om die doel te bereik:</p>
 		<ol type="1">
@@ -66,7 +66,7 @@
 		.nav-container {
 			padding-left: 10rem;
 			padding-right: 10rem;
-			background: #334155;
+			background: linear-gradient(135deg, #334155 0%,  #088DAE 100%);
 			position: sticky;
 			top: 0;
 		}
@@ -120,12 +120,11 @@
 			font-size: 1.3rem;
 			margin: 25px 0 15px 0;
 			padding: 12px 0;
-			border-left: 16px solid #088DAE;
+			border-left: 16px solid #00334d;
 			padding-left: 20px;
 			background-color: #ecf0f1;
 			border-radius: 0 5px 5px 0;
 		}
-
 
 		section {
 			padding-left: 10rem;
@@ -138,7 +137,7 @@
 			margin: 15px 0;
 			box-shadow: 0 2px 10px rgba(0,0,0,0.08);
 			text-align: justify;
-			border-left: 16px solid #d9a638;
+			border-left: 16px solid #088DAE;
 		}
 
 		li {
