+ Missing tag added

--- a/Voorblad.html
+++ b/Voorblad.html
@@ -30,7 +30,7 @@
 			<li>Betroubaarheid en veiligheid: Verseker dat KI-stelsels veilig en betroubaar is om te gebruik.</li>
 			<li>Beheer deur mense: Om te verseker dat mense KI-besluite kan ignoreer om beheer te behou.</li>
 		</ul>
-		Om etiese gebruik van KI binne ’n instelling, besigheid of industrie te verseker, moet die volgende prosedures en prosesse gevolg word:
+		<h3>Om etiese gebruik van KI binne ’n instelling, besigheid of industrie te verseker, moet die volgende prosedures en prosesse gevolg word:</h3>
 		<ul>
 			<li>Vestig duidelike etiese beginsels vir die verantwoordelike gebruik van ’n KI-stelsel.</li>
 			<li>Identifiseer en korrigeer enige vorm van diskriminasie van ’n KI-stelsel.</li>
@@ -200,6 +200,7 @@
 			text-align: center;
 			padding: 1rem 10rem;
 			font-size: 0.9rem;
+			margin-top: 30px;
 		}
 	</style>
 </body>
