--- a/Bronneblad.html
+++ b/Bronneblad.html
@@ -151,6 +151,35 @@
 			body {
 				margin: 0;
 				padding: 0;
+				min-height: 100vh;
+				position: relative;
+			}
+
+			body::after {
+				background: url("KI-in-Klas-3.jpg") top center no-repeat;
+				background-size: cover;
+				content: "";
+				height: 100%;
+				left: 0;
+				position: absolute;
+				top: 0;
+				width: 100%;
+				z-index: -1;
+				opacity: 0.1;
+			}
+
+			body::after {
+				animation: animatedBackground 100s linear infinite alternate;
+				opacity: 0.1;
+			}
+
+			@keyframes animatedBackground {
+				from {
+					background-position: 0 0;
+				}
+				to {
+					background-position: 100% 100%;
+				}
 			}
 
 			a {
