--- a/Inligtingsblad.html
+++ b/Inligtingsblad.html
@@ -2,6 +2,7 @@
 <head>
 	<title>Inligtingsblad</title>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 	<body>
 		<nav class="nav-container">
@@ -152,6 +153,17 @@
 				color: white;
 				box-shadow: inset 0 0 0 2px white;
 			}
+
+			@media (max-width: 992px) {
+				.navbar {
+					flex-direction: column !important;
+				}
+
+				.nav-container {
+					padding: 0 1em;
+					position: unset;
+				}
+			}
 		</style>
 
 		<style>
@@ -230,6 +242,13 @@
 			section {
 				padding-left: 10rem;
 				padding-right: 10rem;
+			}
+
+			@media (max-width: 992px) {
+				section {
+					padding-left: 1rem;
+					padding-right: 1rem;
+				}
 			}
 
 			p:not(.footer p) {
